this is ready to push

--- a/search.html
+++ b/search.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="footer.css">
-    <title>Clothing - Best Apparel Online Store</title>
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="search.css">
+    <title>Search result for</title>
 </head>
-
 <body>
     <nav class="navbar"></nav>
-
-    <!-- hero section -->
-    <header class="hero-section">
-        <div class="content">
-            <img class="logo" src="light-logo.png" alt="">
-            <p class="sub-heading">Best fashion collection of all time</p>
-        </div>
-    </header>
-
-    <!-- card-container -->
-    <section class="product">
+    <section class="search-result">
+        <h2 class="heading">search results for <span>product</span></h2>
+    </section>
+    <!-- product-section  -->
+     <section class="product">
         <p class="product-category">best-selling</p>
         <button class="pre-button"><img src="arrow.png" alt=""></button>
         <button class="nxt-button"><img src="arrow.png" alt=""></button>
@@ -33,7 +26,6 @@
                     <span class="discount-tag">50% off</span>
                     <img class="product-thumb" src="card6.png" alt="">
                     <button class="card-btn">add to whislist</button>
-
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
@@ -137,28 +129,11 @@
                     <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
-
+    
         </div>
-    </section>
-    <!-- collection -->
-    <section class="collection-container">
-        <a class="collection" href="#">
-            <img src="women-collection.png" alt="">
-            <p class="collection-title">women <br>Apparels</p>
-        </a>
-        <a class="collection" href="#">
-            <img src="men-collection.png" alt="">
-            <p class="collection-title">men <br>Apparels</p>
-        </a>
-        <a class="collection" href="#">
-            <img src="accessories-collection.png" alt="">
-            <p class="collection-title">accessories <br>Apparels</p>
-        </a>
-
-    </section>
-
-    <!-- shirt-section -->
-     <section class="shirt-section">
+    </section> 
+      <!-- shirt-section  -->
+      <section class="shirt-section">
         <p class="product-category">Shirts</p>
         <button class="pre-btn"><img src="arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="arrow.png" alt=""></button>
@@ -274,121 +249,115 @@
             </div>
 
         </div>
-    </section> 
-
-    <!-- shoe-section -->
-
+    </section>  
+     <!-- shoe-section -->
      <section class="shoe-section">
-    <p class="product-category">Shoes</p>
-    <button class="p-button"><img src="arrow.png" alt=""></button>
-    <button class="n-button"><img src="arrow.png" alt=""></button>
-    <div class="shoe-container">
-        <div class="shoe-card">
-            <div class="shoe-image">
-                <span class="discount-tag discount-off">50% off</span>
-                <img class="shoe-thumb" src="card9.png" alt="">
-                <button class="shoe-btn">add to whislist</button>
+        <p class="product-category">Shoes</p>
+        <button class="p-button"><img src="arrow.png" alt=""></button>
+        <button class="n-button"><img src="arrow.png" alt=""></button>
+        <div class="shoe-container">
+            <div class="shoe-card">
+                <div class="shoe-image">
+                    <span class="discount-tag discount-off">50% off</span>
+                    <img class="shoe-thumb" src="card9.png" alt="">
+                    <button class="shoe-btn">add to whislist</button>
+                </div>
+                <div class="shoe-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloths..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
             </div>
-            <div class="shoe-info">
-                <h2 class="product-brand">brand</h2>
-                <p class="product-short-des">a short line about the cloths..</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
+            <div class="shoe-card">
+                <div class="shoe-image">
+                    <span class="discount-tag discount-off">50% off</span>
+                    <img class="shoe-thumb" src="card10.png" alt="">
+                    <button class="shoe-btn">add to whislist</button>
+                </div>
+                <div class="shoe-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloths..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="shoe-card">
+                <div class="shoe-image">
+                    <span class="discount-tag discount-off">50% off</span>
+                    <img class="shoe-thumb" src="card11.png" alt="">
+                    <button class="shoe-btn">add to whislist</button>
+                </div>
+                <div class="shoe-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloths..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="shoe-card">
+                <div class="shoe-image">
+                    <span class="discount-tag discount-off">50% off</span>
+                    <img class="shoe-thumb" src="card12.png" alt="">
+                    <button class="shoe-btn">add to whislist</button>
+                </div>
+                <div class="shoe-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloths..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="shoe-card">
+                <div class="shoe-image">
+                    <span class="discount-tag discount-off">50% off</span>
+                    <img class="shoe-thumb" src="card9.png" alt="">
+                    <button class="shoe-btn">add to whislist</button>
+                </div>
+                <div class="shoe-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloths..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="shoe-card">
+                <div class="shoe-image">
+                    <span class="discount-tag discount-off">50% off</span>
+                    <img class="shoe-thumb" src="card11.png" alt="">
+                    <button class="shoe-btn">add to whislist</button>
+                </div>
+                <div class="shoe-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloths..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="shoe-card">
+                <div class="shoe-image">
+                    <span class="discount-tag discount-off">50% off</span>
+                    <img class="shoe-thumb" src="card10.png" alt="">
+                    <button class="shoe-btn">add to whislist</button>
+                </div>
+                <div class="shoe-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloths..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="shoe-card">
+                <div class="shoe-image">
+                    <span class="discount-tag discount-off">50% off</span>
+                    <img class="shoe-thumb" src="card12.png" alt="">
+                    <button class="shoe-btn">add to whislist</button>
+                </div>
+                <div class="shoe-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloths..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
             </div>
         </div>
-        <div class="shoe-card">
-            <div class="shoe-image">
-                <span class="discount-tag discount-off">50% off</span>
-                <img class="shoe-thumb" src="card10.png" alt="">
-                <button class="shoe-btn">add to whislist</button>
-            </div>
-            <div class="shoe-info">
-                <h2 class="product-brand">brand</h2>
-                <p class="product-short-des">a short line about the cloths..</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-        <div class="shoe-card">
-            <div class="shoe-image">
-                <span class="discount-tag discount-off">50% off</span>
-                <img class="shoe-thumb" src="card11.png" alt="">
-                <button class="shoe-btn">add to whislist</button>
-            </div>
-            <div class="shoe-info">
-                <h2 class="product-brand">brand</h2>
-                <p class="product-short-des">a short line about the cloths..</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-        <div class="shoe-card">
-            <div class="shoe-image">
-                <span class="discount-tag discount-off">50% off</span>
-                <img class="shoe-thumb" src="card12.png" alt="">
-                <button class="shoe-btn">add to whislist</button>
-            </div>
-            <div class="shoe-info">
-                <h2 class="product-brand">brand</h2>
-                <p class="product-short-des">a short line about the cloths..</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-        <div class="shoe-card">
-            <div class="shoe-image">
-                <span class="discount-tag discount-off">50% off</span>
-                <img class="shoe-thumb" src="card9.png" alt="">
-                <button class="shoe-btn">add to whislist</button>
-            </div>
-            <div class="shoe-info">
-                <h2 class="product-brand">brand</h2>
-                <p class="product-short-des">a short line about the cloths..</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-        <div class="shoe-card">
-            <div class="shoe-image">
-                <span class="discount-tag discount-off">50% off</span>
-                <img class="shoe-thumb" src="card11.png" alt="">
-                <button class="shoe-btn">add to whislist</button>
-            </div>
-            <div class="shoe-info">
-                <h2 class="product-brand">brand</h2>
-                <p class="product-short-des">a short line about the cloths..</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-        <div class="shoe-card">
-            <div class="shoe-image">
-                <span class="discount-tag discount-off">50% off</span>
-                <img class="shoe-thumb" src="card10.png" alt="">
-                <button class="shoe-btn">add to whislist</button>
-            </div>
-            <div class="shoe-info">
-                <h2 class="product-brand">brand</h2>
-                <p class="product-short-des">a short line about the cloths..</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-        <div class="shoe-card">
-            <div class="shoe-image">
-                <span class="discount-tag discount-off">50% off</span>
-                <img class="shoe-thumb" src="card12.png" alt="">
-                <button class="shoe-btn">add to whislist</button>
-            </div>
-            <div class="shoe-info">
-                <h2 class="product-brand">brand</h2>
-                <p class="product-short-des">a short line about the cloths..</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-    </div>
-   </section>  
-
-    <!-- footer-section -->
-    <footer>
-    </footer>
-
+       </section>  
+    
+   <footer></footer>
+   <script src="home.js"></script>
     <script src="script.js"></script>
-    <script src="home.js"></script>
-    <script src="footer.js"></script> 
+    <script src="footer.js"></script>
 </body>
-
 </html>
